@@ -7,9 +7,7 @@ package net.atos.zac.util;
 
 
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.List;
-import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
 import javax.servlet.Filter;
@@ -20,11 +18,14 @@ import javax.servlet.ServletResponse;
 import javax.servlet.annotation.WebFilter;
 import javax.servlet.http.HttpServletRequest;
 
+/**
+ * If the requested resource doesn't exist, use index.html
+ * more information at https://angular.io/guide/deployment#server-configuration
+ */
 @WebFilter(filterName = "indexRewriteFilter")
 public class indexRewriteFilter implements Filter {
 
-    private final List<String> resourcePaths =
-            Arrays.asList("/assets", "/rest", "/websocket");
+    private final List<String> resourcePaths = List.of("/assets", "/rest", "/websocket");
 
     private static final Pattern REGEX_RESOURCES = Pattern.compile("^.*.(js|js.map|json|css|txt|jpe?g|png|gif|svg|ico|webmanifest|eot|ttf|woff|woff2)$");
 
@@ -45,7 +46,6 @@ public class indexRewriteFilter implements Filter {
     }
 
     private boolean isResource(final HttpServletRequest req) {
-        final Matcher expressieMatcherItem = REGEX_RESOURCES.matcher(req.getServletPath());
-        return expressieMatcherItem.find();
+        return REGEX_RESOURCES.matcher(req.getServletPath()).find();
     }
 }
